fix gap footer a

--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -80,7 +80,7 @@
     a {
       font-size: 20px;
       line-height: 28px;
-      gap: 12px;
+      gap: 11px;
       /* stylelint-disable-next-line */
       svg {
         width: 26px;
